--- a/Source/Application/Application.vcxproj
+++ b/Source/Application/Application.vcxproj
@@ -170,6 +170,7 @@
     <None Include="..\..\Build\Assets\Materials\grid.mtrl" />
     <None Include="..\..\Build\Assets\Materials\multi_grid.mtrl" />
     <None Include="..\..\Build\Assets\Materials\phong.mtrl" />
+    <None Include="..\..\Build\Assets\Materials\postprocess.mtrl" />
     <None Include="..\..\Build\Assets\Materials\quad.mtrl" />
     <None Include="..\..\Build\Assets\Materials\reflection.mtrl" />
     <None Include="..\..\Build\Assets\Materials\refraction.mtrl" />
@@ -194,6 +195,9 @@
     <None Include="..\..\Build\Assets\Shaders\lit_texture_gouraud.vert" />
     <None Include="..\..\Build\Assets\Shaders\multi_lit_texture.frag" />
     <None Include="..\..\Build\Assets\Shaders\multi_lit_texture.prog" />
+    <None Include="..\..\Build\Assets\Shaders\postprocess.frag" />
+    <None Include="..\..\Build\Assets\Shaders\postprocess.prog" />
+    <None Include="..\..\Build\Assets\Shaders\postprocess.vert" />
     <None Include="..\..\Build\Assets\Shaders\reflection.prog" />
     <None Include="..\..\Build\Assets\Shaders\reflection.vert" />
     <None Include="..\..\Build\Assets\Shaders\refraction.prog" />
