--- a/Source/Application/Application.vcxproj.filters
+++ b/Source/Application/Application.vcxproj.filters
@@ -248,5 +248,14 @@
     <None Include="..\..\Build\Assets\Scenes\scene_editor.json">
       <Filter>Scenes</Filter>
     </None>
+    <None Include="..\..\Build\Assets\Scenes\scene_cel.json">
+      <Filter>Scenes</Filter>
+    </None>
+    <None Include="..\..\Build\Assets\Shaders\cel.frag">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="..\..\Build\Assets\Shaders\cel.prog">
+      <Filter>Shaders</Filter>
+    </None>
   </ItemGroup>
 </Project>
