--- a/Source/Application/Application.vcxproj.filters
+++ b/Source/Application/Application.vcxproj.filters
@@ -257,5 +257,11 @@
     <None Include="..\..\Build\Assets\Shaders\cel.prog">
       <Filter>Shaders</Filter>
     </None>
+    <None Include="..\..\Build\Assets\Shaders\cel.vert">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="..\..\Build\Assets\Materials\cel.mtrl">
+      <Filter>Materials</Filter>
+    </None>
   </ItemGroup>
 </Project>
