--- a/Source/Application/Application.vcxproj
+++ b/Source/Application/Application.vcxproj
@@ -144,6 +144,7 @@
     <ClCompile Include="World06.cpp" />
     <ClCompile Include="World07.cpp" />
     <ClCompile Include="World08.cpp" />
+    <ClCompile Include="WorldF.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Engine\Core\Core.vcxproj">
@@ -168,6 +169,7 @@
     <ClInclude Include="World06.h" />
     <ClInclude Include="World07.h" />
     <ClInclude Include="World08.h" />
+    <ClInclude Include="WorldF.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\Build\Assets\Fantasy\fantasy.mtrl" />
@@ -189,6 +191,7 @@
     <None Include="..\..\Build\Assets\Scenes\scene.json" />
     <None Include="..\..\Build\Assets\Scenes\scene_cel.json" />
     <None Include="..\..\Build\Assets\Scenes\scene_editor.json" />
+    <None Include="..\..\Build\Assets\Scenes\scene_final.json" />
     <None Include="..\..\Build\Assets\Scenes\scene_framebuffer.json" />
     <None Include="..\..\Build\Assets\Scenes\scene_shadow.json" />
     <None Include="..\..\Build\Assets\Shaders\cel.frag" />
