--- a/Source/Application/Application.vcxproj.filters
+++ b/Source/Application/Application.vcxproj.filters
@@ -46,6 +46,9 @@
     <ClCompile Include="World08.cpp">
       <Filter>Source</Filter>
     </ClCompile>
+    <ClCompile Include="WorldF.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="World01.h">
@@ -70,6 +73,9 @@
       <Filter>Source</Filter>
     </ClInclude>
     <ClInclude Include="World08.h">
+      <Filter>Source</Filter>
+    </ClInclude>
+    <ClInclude Include="WorldF.h">
       <Filter>Source</Filter>
     </ClInclude>
   </ItemGroup>
@@ -262,6 +268,9 @@
     </None>
     <None Include="..\..\Build\Assets\Materials\cel.mtrl">
       <Filter>Materials</Filter>
+    </None>
+    <None Include="..\..\Build\Assets\Scenes\scene_final.json">
+      <Filter>Scenes</Filter>
     </None>
   </ItemGroup>
 </Project>
